# clgm2

./: .gitignore  CMakeLists.txt  Makefile  README.md  boot.rb  config.json  config.yml
include/: clgm2.h  common.h
include/core/: channel.h  connection.h  connection_manager.h  sptable.h  timer.h
include/glue/: mruby_impl.h  mruby_vm.h
include/util/: config_manager.h
lib/mruby/: build_config.rb
lib/mruby/mrbgems/: clgm2.gembox
src/: main.cpp
src/core/: channel.cpp  connection.cpp  connection_manager.cpp  timer.cpp
src/glue/: mruby_impl.cpp  mruby_vm.cpp
src/util/: config_manager.cpp
